# msgpack-numpy-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_serialize_and_deserialize.py  bench_serialize_and_deserialize.rs
examples/: serialize_and_deserialize.rs
src/: core.rs  lib.rs  serde.rs
tests/: .gitignore  run-tests.sh  setup-python-venv.sh  test_deserialize.py  test_deserialize.rs
tests/helpers/: serialize.py  serialize.rs
