[package]
name = "msgpack-numpy"
version = "0.1.0"
edition = "2021"
authors = ["Terence Liu terence.liu@clearview.ai>"]
description = "A Rust implementation of msgpack-numpy for de-/serializing NumPy scalars and arrays that matches the Python implementation"
license = "MIT"
homepage = "https://github.com/clearviewai/msgpack-numpy-rs"
repository = "https://github.com/clearviewai/msgpack-numpy-rs"
readme = "README.md"
keywords = ["msgpack", "numpy", "serde", "serialization", "deserialization", "ndarray"]
categories = ["encoding", "science"]

[dependencies]
anyhow = "1"
half = "2"
ndarray = "0.15"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"

[dev-dependencies]
rmp-serde = "1.3.0"
ctor = "0.2"
rstest = "0.21"

[[bin]]
name = "test_helpers_serialize"
path = "tests/helpers/serialize.rs"
doc = false

[[bin]]
name = "bench_serialize_and_deserialize"
path = "benches/bench_serialize_and_deserialize.rs"
doc = false
