[package]
name = "msgpack-numpy"
version = "0.1.0"
edition = "2021"
authors = ["Terence Liu terence.liu@clearview.ai>"]
description = "A Rust implementation of msgpack-numpy for de-/serializing NumPy scalars and arrays that matches the Python implementation"
license = "MIT"
homepage = "https://github.com/clearviewai/msgpack-numpy-rs"
repository = "https://github.com/clearviewai/msgpack-numpy-rs"
readme = "README.md"
keywords = ["msgpack", "numpy", "serde", "serialization", "ndarray"]
categories = ["encoding", "science"]

[dependencies]
anyhow = "^1"
thiserror = "^1"
half = { version = "^2", features = ["num-traits"] }
num-traits = ">=0.2, <1"
ndarray = ">=0.15, <1"
serde = { version = "^1", features = ["derive"] }
serde_bytes = ">=0.11, <1"
rmp-serde = "^1.1"

[dev-dependencies]
ctor = ">=0.2, <1"
rstest = ">=0.21, <1"

[[bin]]
name = "test_helpers_serialize"
path = "tests/helpers/serialize.rs"
doc = false

[[bin]]
name = "bench_serialize_and_deserialize"
path = "benches/bench_serialize_and_deserialize.rs"
doc = false
